--- a/ToolbarCustomize1/ToolbarCustomize1/MainMenuPageDetail.xaml
+++ b/ToolbarCustomize1/ToolbarCustomize1/MainMenuPageDetail.xaml
@@ -4,6 +4,6 @@
              x:Class="ToolbarCustomize1.MainMenuPageDetail"
              Title="Detail">
   <StackLayout Padding="10">
-    <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
+    <Button x:Name="NavigationButton" Text="Navigation Button" />
   </StackLayout>
 </ContentPage>
